# vizo

./: Cargo.toml  PRETTIJ.md  README.md  ci.yml
.github/workflows/: ci.yml  release.yml
examples/: example.json  example.toml  example.yaml
src/: app.rs  args.rs  lib.rs  prints.rs  terminal.rs  values.rs
src/processors/: json.rs  mod.rs  toml.rs  yaml.rs
