[package]
name = "vizo"
description = "Visualize structured data formats in a more pretty way."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
readme = "README.md"
keywords = ["cli", "visualize", "format", "structured", "data"]
license = "MIT"
repository = "https://github.com/kostya-zero/vizo"
homepage = "https://github.com/kostya-zero/vizo"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
colored = { version = "3.0.0" }
indexmap = { version = "2.7.1", features = ["serde"] }
# TODO: Find approach to make serde optional
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"], optional = true }
toml = { version = "0.9.2", features = ["preserve_order"], optional = true}
yaml-rust2 = { version = "0.10", optional = true }

[features]
default = ["json", "yaml", "toml"]
json = ["serde_json"]
yaml = ["dep:yaml-rust2"]
toml = ["dep:toml"]

[profile.dev]
incremental = false
lto = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
